--- a/WebApplication2.csproj
+++ b/WebApplication2.csproj
@@ -109,9 +109,20 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="bootstrap-timepicker.min.css" />
+    <Content Include="bootstrap-timepicker.min.js" />
+    <Content Include="bootstrap-without-jquery.min.js" />
+    <Content Include="fonts\fontello.svg" />
     <Content Include="Global.asax" />
     <Content Include="grid.locale-tw.js" />
-    <Content Include="hi.txt" />
+    <Content Include="jquery.timepicker.css" />
+    <Content Include="jquery.timepicker.js" />
+    <Content Include="test.aspx" />
+    <Content Include="WebForm2.aspx" />
+    <Content Include="wickedpicker.css" />
+    <Content Include="wickedpicker.js" />
+    <Content Include="wickedpicker.min.css" />
+    <Content Include="wickedpicker.min.js" />
     <Content Include="_Index.html" />
     <Content Include="jquery-ui.css" />
     <Content Include="jquery-ui.js" />
@@ -125,8 +136,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Constant\ConstCkan.cs" />
+    <Compile Include="Constant\ConstPAlert.cs" />
     <Compile Include="Controllers\EarthquakeController.cs" />
     <Compile Include="Controllers\ProductsController.cs" />
+    <Compile Include="DataSource.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -136,13 +150,30 @@
     <Compile Include="Models\Palert.cs" />
     <Compile Include="Models\Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Upload\UploadFile.cs" />
     <Compile Include="Index.aspx.cs">
       <DependentUpon>Index.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Index.aspx.designer.cs">
       <DependentUpon>Index.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="QueryEarthquake.cs" />
+    <Compile Include="RequestProducer.cs" />
+    <Compile Include="test.aspx.cs">
+      <DependentUpon>test.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="test.aspx.designer.cs">
+      <DependentUpon>test.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Upload\FileToUpload.cs" />
+    <Compile Include="Upload\FileUploader.cs" />
+    <Compile Include="WebForm2.aspx.cs">
+      <DependentUpon>WebForm2.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WebForm2.aspx.designer.cs">
+      <DependentUpon>WebForm2.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -151,6 +182,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="test.json" />
+    <Content Include="fonts\fontello.eot" />
+    <Content Include="fonts\fontello.ttf" />
+    <Content Include="fonts\fontello.woff" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
